tests/paczka1/small_fuzzy/32405542.err
Error in line 2: P6bBn9P S147 97,1
Error in line 4: P6bBn9P A449 41,3
Error in line 8: Gpi S147 86,1
